Fix vertical spacing on projects

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -206,7 +206,7 @@ main {
    height: 25rem;
    margin: 1rem;
    padding-top: 2rem;
-   margin-bottom: 3rem;
+   margin-bottom: 4rem;
 }
 
 .project-card-holder:hover .project-card {
